--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "express": "3.0.1",
     "mongodb": "^3.4.1",
+    "node-uuid": "^1.4.8",
+    "uuid": "^3.3.3",
     "websocket": "*"
   }
 }
